# llm-browser

./: README.md  main.py  pyproject.toml
jupyter/: browser_integration.ipynb  content_filtering_test.ipynb  github_url_conversion.ipynb  init.ipynb  link_extraction.ipynb  navigation_extraction.ipynb
llm_browser/: __init__.py  __main__.py  cli.py  config.py  models.py  server.py
llm_browser/utils/: grep.py  html.py  url.py
