[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com"}
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "markdown>=3.7",
    "markdownify>=1.0.0",
    "mcp[cli]>=1.3.0",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]

[project.scripts]
llm-browser = "llm_browser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_browser"]